# mao-45m-merge

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: tests.yaml  tests.yml
docs/: build  conf.py  index.md
mao_45m_merge/: __init__.py  merge.py  powermeter.py
scripts/: merge.py
tests/: test_accelerometer.py  test_antenna.py  test_correlator.py  test_merge.py  test_metadata.py  test_power_meter.py  test_powermeter.py  test_thermometer.py  test_weather.py
